src/components/sidebar/style.less
.tools-col {
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    .widget-bar {
        margin-top: 10em;
    }
    .bar-icon {
        .color-theme-8;
        box-sizing: border-box;
        width: 32px;
        height: 32px;
        text-align: center;
        margin-bottom: 2px;
        border-top-left-radius: @border-radius;
        border-bottom-left-radius: @border-radius;
        box-shadow: @shadow;
        &.select-active {
            .color-theme-7;
        }
        &>span {
            .vertical-align;
        }
        &:last-of-type {
            margin-bottom: 0;
        }
    }
}

.sidebar {
    float: right;
    height: 100%;
    padding-top: 77px;
    >div {
        box-sizing: border-box;
        width: 192px;
        margin-bottom: 1.5em;
        &:last-of-type {
            margin-bottom: 0;
        }
        .widget-header {
            .color-theme-1;
        }
        .widget-content {
            min-height: 160px;
        }
    }
}

// .sidebar-container {
//     .shadow-margin;
//     .clearfix;
//     overflow-x: hidden;
//     margin-right: 5px;
//     #default-sidebars {
//         min-height: 90px;
//     }
//     .sidebar-widget {
//         width: 250px;
//         margin-bottom: 20px;
//         margin-left: 50px;
//         padding: 5px;
//         overflow: hidden;
//         .widget-header {
//             .color-theme-1;
//         }
//         .widget-content {
//             min-height: 10em;
//         }
//     }
// }
//
// TODO: remove - erstmal notwendig, bis draggable-container auch in sidebar enthalten ist
.sidebar {
    >div {
        &.config-mode:not(.config-dialog-shown) {
            z-index: 100;
        }
        position: relative;
        .widget-overlay {
            cursor: ns-resize;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            border-radius: 3px;
            border: 1px solid @secondary-0;
            border-top: none;
            .widget-overlay-content {
                position: absolute;
                opacity: 0.2;
                top: 2em;
                right: 0;
                bottom: 0;
                left: 0;
                background-color: @config-color;
                box-sizing: border-box;
            }
        }
        .drag-element {
            opacity: 0.7;
        }
        .drop-element {
            background-color: @tertiary-3;
        }
    }
}

